maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: ':' expected but ',' found.
def hasBottomWall(x, y) : Boolean = {
                   ^JediEscaper:51: error: identifier expected but '}' found.
}
^